@@ -1,0 +1,15 @@
+﻿// <copyright file="IToolRequiredEnvironmentVariables.cs" company="Mark Final">
+//  Opus
+// </copyright>
+// <summary>Opus Core</summary>
+// <author>Mark Final</author>
+namespace Opus.Core
+{
+    public interface IToolRequiredEnvironmentVariables
+    {
+        StringArray VariableNames
+        {
+            get;
+        }
+    }
+}
