@@ -97,6 +97,7 @@
     <Compile Include="Interfaces\INestedDependents.cs" />
     <Compile Include="Interfaces\ITargetFilters.cs" />
     <Compile Include="Interfaces\ITool.cs" />
+    <Compile Include="Interfaces\IToolRequiredEnvironmentVariables.cs" />
     <Compile Include="Interfaces\IToolSupportsResponseFile.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="ModuleCollection.cs" />
