@@ -7,7 +7,6 @@ namespace Gcc
 {
     public sealed class Linker : GccCommon.Linker
     {
-        private Opus.Core.StringArray requiredEnvironmentVariables = new Opus.Core.StringArray();
         private Opus.Core.StringArray environmentPaths = new Opus.Core.StringArray();
         private string binPath;
 
@@ -32,14 +31,6 @@ namespace Gcc
         public override string ExecutableCPlusPlus(Opus.Core.Target target)
         {
             return System.IO.Path.Combine(this.binPath, "g++-4.0");
-        }
-
-        public override Opus.Core.StringArray RequiredEnvironmentVariables
-        {
-            get
-            {
-                return this.requiredEnvironmentVariables;
-            }
         }
 
         public override Opus.Core.StringArray EnvironmentPaths(Opus.Core.Target target)
