@@ -9,11 +9,6 @@ namespace MingwCommon
     {
         public abstract string Executable(Opus.Core.Target target);
 
-        public abstract Opus.Core.StringArray RequiredEnvironmentVariables
-        {
-            get;
-        }
-
         public abstract Opus.Core.StringArray EnvironmentPaths(Opus.Core.Target target);
 
         public override Opus.Core.StringArray IncludePathCompilerSwitches
